Minor bug fixes >fixed QTE's low score >fixed level choice menu >lowered time between transaction screens >caret is now visible during title change

--- a/task_game/styles/cutscene styles.css
+++ b/task_game/styles/cutscene styles.css
@@ -57,6 +57,7 @@
   @keyframes continueGlow {
     0% {
       opacity: 1;
+      color: yellow;
     }
   
     45% {
